--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mariozechner/pi-coding-agent": "^0.52.6",
     "@radix-ui/react-switch": "^1.2.6",
     "@streamdown/code": "^1.0.1",
     "class-variance-authority": "^0.7.1",
